2007-02-19  Nicola Pero  <nicola.pero@meta-innovation.com>

	* gnustep-config.in: Check that we are given a valid option and
	print an error message if not.  Extended --help.  Use
	--variable=xxx syntax to print variables to make the syntax more
	similar to pkg-config's one.  Redirect stderr to /dev/null when
	running make.  Only print the variable value if not empty.

2007-02-19  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: By default, do not import an existing
	configuration file.  In most cases, this is now an annoyance
	rather than a convenience as it overrides the --prefix=xxx and
	--with-layout=yyy options.
	* configure: Regenerated.

2007-02-19  David Ayers  <ayers@fsfe.org>

	* GNUmakefile.in (uninstall:): Remove print_unique_pathlist.sh,
	filesystem.sh, filesystem.csh and gnustep-config.  Remove
	GNUSTEP_TARGET_LDIR.  Reorder removed directories according
	to reverse order of installation.  Only remove existing directories.
	Remove obsolete comment.

	* common.make (TRANSFORM_PATHS_SCRIPT): Remove obsolete variable.
	
2007-02-19  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Documentation/install.texi: Rewritten large parts to describe
	the new installation and configuration process.
	* INSTALL: Regenerated.
	
2007-02-18  Nicola Pero  <nicola.pero@meta-innovation.com>

	* config-noarch.make.in: Removed the deprecation warnings added
	earlier today, because in some situations they seem to be
	triggered spuriously (Reported by Fred Kiefer).

2007-02-18  Nicola Pero  <nicola.pero@meta-innovation.com>

	* rules.make (.PHONY): Added declaration of new
	print-gnustep-make-* targets as PHONY.

2007-02-18  Nicola Pero  <nicola.pero@meta-innovation.com>

	* empty.make: Added file that was missing in past commit.

2007-02-18  Nicola Pero  <nicola.pero@meta-innovation.com>

	Updated rpm building code, and removed separate debug packages.
	* GNUmakefile.in (MAKE_FILES): Removed spec-debug-rules.template.